--- a/App/templates/marca/modificarMarca.html
+++ b/App/templates/marca/modificarMarca.html
@@ -7,7 +7,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-
+            {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2" style="margin-top: 70px;">
                 <h2>Modificación de marca</h2>
                 <form action="{{ url_for('editarMarca')}}" method="POST">
