--- a/App/templates/tipoProducto/modificarTipoProducto.html
+++ b/App/templates/tipoProducto/modificarTipoProducto.html
@@ -6,24 +6,25 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar.html' %}
         <div id="page-content-wrapper">
-                <div class="container p-2" style="margin-top: 70px;">
-                    <h2>Modificación del tipo de producto</h2>
-                    <form action="{{ url_for('editarTipoProducto') }}" method="POST">
-                        <div class="form-group">
-                            <label for="nombre">Nombre actual del tipo de producto a modificar</label>
-                            <input readonly type="text" class="form-control" name="nombre" id="nombre" value="{{ data[1] }}">
-                        </div>
-                        <div class="form-group">
-                            <label for="nombreNuevo">Nuevo nombre del tipo de producto</label>
-                            <input type="text" class="form-control" required name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto" maxlength="150">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Aceptar</button>
-                        <a class="btn btn-danger" href="/tipoProductoABMC" role="button">Cancelar</a>
-                    </form>
-                </div>
+            {% include 'navbars/navbar_admin.html' %}
+            <div class="container p-2" style="margin-top: 70px;">
+                <h2>Modificación del tipo de producto</h2>
+                <form action="{{ url_for('editarTipoProducto') }}" method="POST">
+                    <div class="form-group">
+                        <label for="nombre">Nombre actual del tipo de producto a modificar</label>
+                        <input readonly type="text" class="form-control" name="nombre" id="nombre" value="{{ data[1] }}">
+                    </div>
+                    <div class="form-group">
+                        <label for="nombreNuevo">Nuevo nombre del tipo de producto</label>
+                        <input type="text" class="form-control" required name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto" maxlength="150">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/tipoProductoABMC" role="button">Cancelar</a>
+                </form>
+            </div>
         </div>
     </div>
-    {% include 'footer/footer.html' %} 
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
