--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -17,9 +17,13 @@ body {
     font-size: 1.2rem;
 }
 
+
+/*
 #sidebar-wrapper .list-group {
-    /* width: 15rem;*/
-}
+     width: 15rem;
+
+
+}*/
 
 
 /*
