--- a/App/templates/combo/altaCombo.html
+++ b/App/templates/combo/altaCombo.html
@@ -3,15 +3,18 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar_admin.html' %}
-    <div class="container p-2">
-        <h2>Alta combo</h2>
-        <form action="guardarCombo" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre del combo</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del combo" maxlength="50">
-            </div>
-            <!-- <div class="form-group">
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+            <div class="container p-2">
+                <h2>Alta combo</h2>
+                <form action="guardarCombo" method="POST">
+                    <div class="form-group">
+                        <label for="nombre">Nombre del combo</label>
+                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del combo" maxlength="50">
+                    </div>
+                    <!-- <div class="form-group">
                 <label for="precio">Precio Total</label>
                 <input type="number" class="form-control" name="precioTotal" id="precioTotal" placeholder="Ingresar el precio del combo">
             </div>
@@ -19,11 +22,13 @@
                 <label for="descuento">Descuento</label>
                 <input type="number" class="form-control" name="descuento" id="descuento" placeholder="Ingresar el descuento del combo">
             </div> -->
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
+            </div>
+        </div>
     </div>
-
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
