--- a/App/templates/combo/mostrarCombo.html
+++ b/App/templates/combo/mostrarCombo.html
@@ -7,6 +7,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2">
                 <center>
                     <h2 style="padding-top: 50px;">{{dato['nombreCombo']}}</h2>
@@ -88,7 +89,7 @@
         });
 
 
-        
+
     });
 </script>
 
