--- a/App/templates/ejemplar/ejemplaresDeUnProducto.html
+++ b/App/templates/ejemplar/ejemplaresDeUnProducto.html
@@ -1,131 +1,141 @@
 <!DOCTYPE html>
 <html lang="es">
 {% include 'header/header.html' %}
-    <head>
-        <title>Ejemplares</title>
-        <style>
-            .titulo{
-              font-size: 30px;
-              margin-top: 70px;
-              text-align: center;
-              padding-bottom: 20px;
-              font-weight: bold;
-            }
-            .tabla{
-                display:block;
-                margin:auto;
-                text-align: center;
-                width: 80%;
-                padding-top: 15px;
-            }
-            .numero{
-                width: 300px;
-            }
-            .estado{
-                width: 450px;
-            }
-            .accion{
-                width: 50px;
-            }
-            th{
-                color: black;
-                font-size: 20px;
-                padding-top: 10px;
-                padding-bottom: 10px;
-            }
-            td{
-                font-size: 20px;
-                padding-top: 7px;
-                padding-bottom: 7px;
-                border-color: green;
-                color: black;
-                border-top: gray 1px solid;
-                border-bottom: gray 1px solid;
-            }
-            .botones{
-                border: transparent;
-                text-align: center;
-                width: 100px;
-            }
-            .eliminar{
+
+<head>
+    <title>Ejemplares</title>
+    <style>
+        .titulo {
+            font-size: 30px;
+            margin-top: 70px;
+            text-align: center;
+            padding-bottom: 20px;
+            font-weight: bold;
+        }
+        
+        .tabla {
+            display: block;
+            margin: auto;
+            text-align: center;
+            width: 80%;
+            padding-top: 15px;
+        }
+        
+        .numero {
+            width: 300px;
+        }
+        
+        .estado {
+            width: 450px;
+        }
+        
+        .accion {
+            width: 50px;
+        }
+        
+        th {
+            color: black;
+            font-size: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        
+        td {
+            font-size: 20px;
+            padding-top: 7px;
+            padding-bottom: 7px;
+            border-color: green;
+            color: black;
+            border-top: gray 1px solid;
+            border-bottom: gray 1px solid;
+        }
+        
+        .botones {
+            border: transparent;
+            text-align: center;
+            width: 100px;
+        }
+        
+        .eliminar {
             background-color: transparent;
             border: none;
             font-size: 26px;
             padding: 10px;
-            }
-            .btn-ej{
-                background-color: #18BC9C;
-                font-size: 20px;
-                margin-right:5px;
-                margin-left:5px;
-                margin-bottom:15px;
-                margin-top: 5px;
-                padding: 5px 10px 5px 10px;
-                border: none;
-                border-radius: 10px;
-                color:whitesmoke;
-                display:block;
-                margin:auto;
-                text-align: center;
-                width: 200px;
-            }
-        </style>
-    </head>
+        }
+        
+        .btn-ej {
+            background-color: #18BC9C;
+            font-size: 20px;
+            margin-right: 5px;
+            margin-left: 5px;
+            margin-bottom: 15px;
+            margin-top: 5px;
+            padding: 5px 10px 5px 10px;
+            border: none;
+            border-radius: 10px;
+            color: whitesmoke;
+            display: block;
+            margin: auto;
+            text-align: center;
+            width: 200px;
+        }
+    </style>
+</head>
 
 <body>
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-
+            {% include 'navbars/navbar_admin.html' %}
             <div class="titulo">
                 <span>Ejemplares del producto "{{data['nombre_prod']}}"</span>
-              </div>
-              <a href="{{ url_for('cargarEjemplar')}}/{{data['id_prod']}}/{{data['nombre_prod']}}" class="btn-ej">Cargar ejemplares</a>
-              <table class="tabla">
-                  <tr>
-                      <th class="numero">N° de serie</th>
-                      <th class="estado">Estado</th>
-                  </tr>
-                  {% for e in data['ejemplares'] %}
-                      <tr>
-                          <td>{{ e[0] }}</td>
-                          {% if e[1] == False %}
-                          <td>Disponible</td>
-                          {%endif%}
-                          {% if e[1] == True %}
-                          <td>Vendido</td>
-                          {%endif%}
-                          
-                          <td class="botones">
-                            <form action="modificarEjemplar" method="POST">
-                                <div>
-                                    <input value="{{e[0]}}" type="hidden" class="form-control" name="numeroSerie" id="numeroSerie">
-                                    <input value="{{data['id_prod']}}" type="hidden" class="form-control" name="idProducto" id="idProducto">
-                                    <button class="eliminar" type="submit"><i class="fa fa-edit" aria-hidden="true"></i></button>
-                                </div>
-                            </form>
-                          </td>
+            </div>
+            <a href="{{ url_for('cargarEjemplar')}}/{{data['id_prod']}}/{{data['nombre_prod']}}" class="btn-ej">Cargar ejemplares</a>
+            <table class="tabla">
+                <tr>
+                    <th class="numero">N° de serie</th>
+                    <th class="estado">Estado</th>
+                </tr>
+                {% for e in data['ejemplares'] %}
+                <tr>
+                    <td>{{ e[0] }}</td>
+                    {% if e[1] == False %}
+                    <td>Disponible</td>
+                    {%endif%} {% if e[1] == True %}
+                    <td>Vendido</td>
+                    {%endif%}
 
-                          <td class="botones">
-                            <form action="eliminarEjemplar" method="POST">
-                                <div>
-                                    <input value="{{e[0]}}" type="hidden" class="form-control" name="numeroSerie" id="numeroSerie">
-                                    <button class="eliminar" type="submit"><i class="fa fa-trash" aria-hidden="true"></i></button>
-                                </div>
-                            </form>
-                          </td>
-                      </tr>
-                  {% endfor %}
-              </table>
-  
-          </div>
-      </div>
-            
+                    <td class="botones">
+                        <form action="modificarEjemplar" method="POST">
+                            <div>
+                                <input value="{{e[0]}}" type="hidden" class="form-control" name="numeroSerie" id="numeroSerie">
+                                <input value="{{data['id_prod']}}" type="hidden" class="form-control" name="idProducto" id="idProducto">
+                                <button class="eliminar" type="submit"><i class="fa fa-edit" aria-hidden="true"></i></button>
+                            </div>
+                        </form>
+                    </td>
+
+                    <td class="botones">
+                        <form action="eliminarEjemplar" method="POST">
+                            <div>
+                                <input value="{{e[0]}}" type="hidden" class="form-control" name="numeroSerie" id="numeroSerie">
+                                <button class="eliminar" type="submit"><i class="fa fa-trash" aria-hidden="true"></i></button>
+                            </div>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
+
         </div>
+    </div>
+
+    </div>
     </div>
 
     {% include 'footer/footer.html' %}
 
 </body>
+
 </html>
