--- a/App/templates/producto/bajaProducto.html
+++ b/App/templates/producto/bajaProducto.html
@@ -4,18 +4,24 @@
 
 <body>
     {% include 'navbars/navbar_admin.html' %}
-    <div class="container p-2">
-        <h2>Baja producto</h2>
-        <form action="eliminarProducto" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre del producto</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del producto">
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+            <div class="container p-2">
+                <h2>Baja producto</h2>
+                <form action="eliminarProducto" method="POST">
+                    <div class="form-group">
+                        <label for="nombre">Nombre del producto</label>
+                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del producto">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
+
+
             </div>
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
-
-
+        </div>
     </div>
 </body>
 
