--- a/App/templates/rol/modificarRol.html
+++ b/App/templates/rol/modificarRol.html
@@ -7,6 +7,7 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2">
                 <h2>Modificación de rol</h2>
                 <form action="{{ url_for('editarRol') }}" method="POST">
@@ -26,6 +27,7 @@
             </div>
         </div>
     </div>
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
