--- a/App/templates/rol/rolEliminado.html
+++ b/App/templates/rol/rolEliminado.html
@@ -7,15 +7,22 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar_admin.html' %} {% if data == 1 %}
-            <h2>Rol Eliminado!</h2>
-            {% else %}
-            <h2>Rol No Existe!</h2>
-            {% endif %}
+            {% include 'navbars/navbar_admin.html' %}
 
-            <a href="/rolABMC"> volver </a>
+
+            <div class="container p-2">
+                {% if data == 1 %}
+                <h2>Rol Eliminado!</h2>
+                {% else %}
+                <h2>Rol No Existe!</h2>
+                {% endif %}
+
+                <a href="/rolABMC"> volver </a>
+            </div>
         </div>
     </div>
+
+
 </body>
 
 </html>
