--- a/App/templates/rol/rolGuardado.html
+++ b/App/templates/rol/rolGuardado.html
@@ -3,13 +3,23 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% if verificador == [] %}
-    <h2>Rol dado de alta!</h2>
-    {% else %}
-    <h2>El rol ya existe</h2>
-    {% endif %}
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
 
-    <a href="/rolABMC"> volver </a>
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+            <div class="container p-2">
+
+                {% if verificador == [] %}
+                <h2>Rol dado de alta!</h2>
+                {% else %}
+                <h2>El rol ya existe</h2>
+                {% endif %}
+
+                <a href="/rolABMC"> volver </a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
