--- a/App/templates/rol/rolModificado.html
+++ b/App/templates/rol/rolModificado.html
@@ -7,13 +7,17 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar_admin.html' %} {% if data == 1 %}
-            <h2>Rol Modificado!</h2>
-            {% else %}
-            <h2>Rol No Existe!</h2>
-            {% endif %}
+            {% include 'navbars/navbar_admin.html' %}
+            <div class="container p-2">
+                {% if data == 1 %}
+                <h2>Rol Modificado!</h2>
+                {% else %}
+                <h2>Rol No Existe!</h2>
+                {% endif %}
 
-            <a href="/rolABMC"> volver </a>
+                <a href="/rolABMC"> volver </a>
+            </div>
+
         </div>
     </div>
 </body>
