--- a/App/templates/producto/verProducto.html
+++ b/App/templates/producto/verProducto.html
@@ -115,7 +115,7 @@
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar_usuarios.html' %}
         <div id="page-content-wrapper">
-
+            {% include 'navbars/navbar_usuario_logueado.html' %}
             <div class="container p-2">
                 <div class="card-deck">
                     <div class="card">
