--- a/App/templates/login/loginandrea.html
+++ b/App/templates/login/loginandrea.html
@@ -114,6 +114,8 @@
 <body class="fondo">
 
     <div class="cuadrado">
+        <!--<img src="{{ url_for('static', filename='img/banner.png') }}">-->
+
         <div class="formulario">
             <form action="loginAndrea" method="POST" class="p1">
                 <h2 style="margin-bottom: 10px;">Inicia sesión</h2>
