--- a/App/templates/usuario/altaUsuario.html
+++ b/App/templates/usuario/altaUsuario.html
@@ -39,5 +39,11 @@
     </div>
 
 </body>
+<script>
+    //Limpia campo de contacto al cargar la pantalla al inicio 
+    window.onload = () => {
+        document.getElementById("contacto").value = '';
+    }
+</script>
 
 </html>
