--- a/App/templates/ejemplar/modificarEjemplar.html
+++ b/App/templates/ejemplar/modificarEjemplar.html
@@ -3,19 +3,24 @@
 {% include 'header/header.html' %}
 
 <body>
-    <div class="container p-2">
-        <h2>Modificar ejemplar</h2>
-        <form action="editarEjemplar" method="POST">
-            <input value="{{idProducto}}" type="hidden" class="form-control" name="idProducto" id="idProducto">
-            <div class="form-group">
-                <label for="numeroSerie">Número de serie  del ejemplar a modificar</label>
-                <input readonly value="{{numeroSerie}}" type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie">
-            </div>
-            <div class="form-group">
-                <label for="nuevoNumeroSerie">Nuevo numero de serie</label>
-                <input type="text" class="form-control" name="nuevoNumeroSerie" id="nuevoNumeroSerie" placeholder="Ingresar numero de serie" maxlength="50">
-            </div>
-<!--             <div class="form-group">
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar_admin.html' %}
+            <div class="container-fluid">
+                <h2>Modificar ejemplar</h2>
+                <form action="editarEjemplar" method="POST">
+                    <input value="{{idProducto}}" type="hidden" class="form-control" name="idProducto" id="idProducto">
+                    <div class="form-group">
+                        <label for="numeroSerie">Número de serie  del ejemplar a modificar</label>
+                        <input readonly value="{{numeroSerie}}" type="text" class="form-control" name="numeroSerie" id="numeroSerie" placeholder="Ingresar el número de serie">
+                    </div>
+                    <div class="form-group">
+                        <label for="nuevoNumeroSerie">Nuevo numero de serie</label>
+                        <input type="text" class="form-control" name="nuevoNumeroSerie" id="nuevoNumeroSerie" placeholder="Ingresar numero de serie" maxlength="50">
+                    </div>
+                    <!--             <div class="form-group">
                 <label for="nuevoVendido">¿Producto vendido?</label>
                 <input type="text" class="form-control" name="nuevoVendido" id="nuevoVendido" placeholder="true or false">
             </div>
@@ -23,12 +28,15 @@
                 <label for="nuevoProducto">Nuevo id de producto</label>
                 <input type="number" class="form-control" name="nuevoProducto" id="nuevoProducto" placeholder="Ingresar el código del producto">
             </div> -->
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
 
 
+            </div>
+        </div>
     </div>
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
