--- a/App/templates/producto/verProductoNoLog.html
+++ b/App/templates/producto/verProductoNoLog.html
@@ -114,31 +114,31 @@
                             <tr>
                                 <td>
                                     <section class="awSlider">
-                                        <div class="carousel slide" data-ride="carousel">
+                                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                             <div class="carousel-inner" role="listbox">
                                                 {% if cantidadFotos == 0 %}
-                                                <div class="item active">
+                                                <div class="carousel-item active">
                                                     <img class="imagen" src="..\static\img\producto-default.png">
                                                 </div>
                                                 {%endif%} {% if cantidadFotos != 0 %} {% for foto in range(cantidadFotos) %} {% if foto == 0 %}
-                                                <div class="item active">
+                                                <div class="carousel-item active">
                                                     <img class="imagen" src="{{fotos[foto][0]}}">
                                                 </div>
                                                 {%endif%} {% if foto != 0 %}
-                                                <div class="item">
+                                                <div class="carousel-item">
                                                     <img class="imagen" src="{{fotos[foto][0]}}">
                                                 </div>
                                                 {%endif%} {%endfor%} {%endif%}
                                             </div>
 
                                             <!-- Controls -->
-                                            <a class="left carousel-control" href=".carousel" role="button" data-slide="prev">
-                                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                                <span class="sr-only">Geri</span>
+                                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                <span class="sr-only">Previous</span>
                                             </a>
-                                            <a class="right carousel-control" href=".carousel" role="button" data-slide="next">
-                                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                                <span class="sr-only">İleri</span>
+                                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                <span class="sr-only">Next</span>
                                             </a>
                                         </div>
                                     </section>
