navbar y sidebar mod usuario

--- a/App/templates/login/contraseniaIncorrecta.html
+++ b/App/templates/login/contraseniaIncorrecta.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>Acceso</title>
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/fontawesome/css/all.min.css') }}">
+    <!-- Fontawesome -->
+    <script src="{{ url_for('static', filename='lib/fontawesome/js/all.min.js') }}"></script>
     <style>
         .fondo {
             /* background-image: url("https://seoymedia.com/sites/default/files/portada_puntoofertas.jpg");
