--- a/App/templates/usuario/usuarioGuardado.html
+++ b/App/templates/usuario/usuarioGuardado.html
@@ -5,16 +5,17 @@
 <head>
     <title>Usuario guardado</title>
     <style>
-        .mensaje{
-            display:block;
-            margin:auto;
+        .mensaje {
+            display: block;
+            margin: auto;
             text-align: center;
             font-size: 30px;
             margin-top: 120px;
         }
-        .boton{
-            display:block;
-            margin:auto;
+        
+        .boton {
+            display: block;
+            margin: auto;
             text-align: center;
             font-size: 20px;
             margin-top: 40px;
@@ -27,18 +28,17 @@
         {% include 'navbars/sidebar.html' %}
 
         <div id="page-content-wrapper">
-            {% include 'navbars/navbar_admin.html' %}
-
-                {% if verificador == [] %}
-                <div class="mensaje">Usuario dado de alta</div>
-                {% else %}
-                <div class="mensaje">El usuario ya existe</div>
-                {% endif %}
-                <a class="boton" href="/usuarioABMC"> Volver </a>
+            {% include 'navbars/navbar_admin.html' %} {% if verificador == [] %}
+            <div class="mensaje">Usuario dado de alta</div>
+            {% else %}
+            <div class="mensaje">El usuario ya existe</div>
+            {% endif %}
+            <a class="boton" href="/usuarioABMC"> Volver </a>
 
         </div>
 
     </div>
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
