--- a/App/templates/usuario/usuarioModificado.html
+++ b/App/templates/usuario/usuarioModificado.html
@@ -5,16 +5,17 @@
 <head>
     <title>Usuario modificado</title>
     <style>
-        .mensaje{
-            display:block;
-            margin:auto;
+        .mensaje {
+            display: block;
+            margin: auto;
             text-align: center;
             font-size: 30px;
             margin-top: 120px;
         }
-        .boton{
-            display:block;
-            margin:auto;
+        
+        .boton {
+            display: block;
+            margin: auto;
             text-align: center;
             font-size: 20px;
             margin-top: 40px;
@@ -29,13 +30,14 @@
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
 
-                <div class="mensaje">Usuario modificado</div>
+            <div class="mensaje">Usuario modificado</div>
 
-                <a class="boton" href="/usuarioABMC"> Volver </a>
+            <a class="boton" href="/usuarioABMC"> Volver </a>
 
         </div>
 
     </div>
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
