Correccion en la cancelacion de compras

--- a/App/templates/compra/misCompras.html
+++ b/App/templates/compra/misCompras.html
@@ -96,7 +96,7 @@
                                                 <input value="{{e[5]}}" type="hidden" class="form-control" name="idCompra" id="idCompra">
                                                 <input value="{{e[1]}}" type="hidden" class="form-control" name="idCarrito" id="idCarrito">
                                                 <input value="{{e[2]}}" type="hidden" class="form-control" name="total" id="total">
-                                                <input value="{{e[4]}}" type="hidden" class="form-control" name="estado" id="estado">
+                                                <input value="{{e[6]}}" type="hidden" class="form-control" name="estado" id="estado">
                                                 <button class="verCompra" type="submit">Ver Compra</button>
                                             </div>
                                         </form>
@@ -117,7 +117,7 @@
                                             <form action="verCupon" method="POST">
                                                 <div>
                                                     <input value="{{e[0]}}" type="hidden" class="form-control" name="idCompra" id="idCompra">
-                                                    <button class="pagar" type="submit">Ver cupón</button>
+                                                    <button class="pagar" type="submit">Pagar</button>
                                                 </div>
                                             </form>
                                         </td>
