Boton cancelar en CrearusuarioPorUsuario, espesificacion de estilo de boton igresar para que aplique particual en la nav

--- a/App/templates/navbars/navbar_nologueado.html
+++ b/App/templates/navbars/navbar_nologueado.html
@@ -1,5 +1,5 @@
 <style>
-    .btn-danger {
+    #btnIngresar .btn-danger {
         background-color: white;
         border-color: white;
         color: black;
@@ -15,7 +15,7 @@
 </style>
 <nav class="navbar navbar-expand-lg navbar-light bg-dark p-1">
     <span class="navbar-text">
-        <a href="{{ url_for('iniciarSesion') }}"><button class="btn btn-danger">Ingresar</button></a>
+        <a id="btnIngresar" href="{{ url_for('iniciarSesion') }}"><button class="btn btn-danger">Ingresar</button></a>
     </span>
 </nav>
 {% include 'sesion/sesion.html' %}
