--- a/App/templates/usuario/crearUsuarioPorUsuario.html
+++ b/App/templates/usuario/crearUsuarioPorUsuario.html
@@ -22,32 +22,30 @@
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_nologueado.html' %}
 
-            <div id="page-content-wrapper" style="margin-top: 70px;">
-                <div class="container">
-                    <h2>Registro de usuario</h2>
-                    <form action="guardarUsuario" method="POST">
-                        <div class="form-group">
-                            <label for="nombreUsuario">Email</label>
-                            <input type="email" class="form-control" required name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar su email" maxlength="150">
-                        </div>
-                        <div class="form-group">
-                            <label for="contrasenia">Contraseña</label>
-                            <input type="password" class="form-control" required name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña" minlength="5" maxlength="20">
-                        </div>
-                        <div class="form-group">
-                            <label for="contrasenia_confirmacion">Confirmar contraseña</label>
-                            <input type="password" class="form-control" required name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña" minlength="5" maxlength="20">
-                        </div>
-                        <div class="form-group">
-                            <label for="contacto">Otros datos de contacto</label>
-                            <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto" maxlength="70">                            
+            <div class="container p-2" style="margin-top: 70px;">
+                <h2>Registro de usuario</h2>
+                <form action="guardarUsuario" method="POST">
+                    <div class="form-group">
+                        <label for="nombreUsuario">Email</label>
+                        <input type="email" class="form-control" required name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar su email" maxlength="150">
+                    </div>
+                    <div class="form-group">
+                        <label for="contrasenia">Contraseña</label>
+                        <input type="password" class="form-control" required name="contrasenia" id="contrasenia" placeholder="Ingresar la contraseña" minlength="5" maxlength="20">
+                    </div>
+                    <div class="form-group">
+                        <label for="contrasenia_confirmacion">Confirmar contraseña</label>
+                        <input type="password" class="form-control" required name="contrasenia_confirmacion" id="contrasenia_confirmacion" placeholder="Vuelve a ingresar la contraseña" minlength="5" maxlength="20">
+                    </div>
+                    <div class="form-group">
+                        <label for="contacto">Otros datos de contacto</label>
+                        <textarea type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto" maxlength="70">                            
                             </textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Aceptar</button>
-                    </form>
-                </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/iniciarSesion" role="button">Cancelar</a>
+                </form>
             </div>
-
         </div>
 
     </div>
