Correccion en el reporte de ventas

--- a/App/templates/admin/ventasPorFecha.html
+++ b/App/templates/admin/ventasPorFecha.html
@@ -103,7 +103,7 @@
             text-align: center;
             padding-bottom: 20px;
             width: 50%;
-            color: blanchedalmond;
+            color: rgb(102, 100, 97);
         }
     </style>
 </head>
