--- a/App/templates/cliente/manual_comprador.html
+++ b/App/templates/cliente/manual_comprador.html
@@ -185,7 +185,7 @@
                             <summary>¿Cómo cambio mi contraseña?</summary>
                             <p>
                                 En el extremo superior derecho, posicionarse sobre el ícono <i class='fas fa-user'></i> </br>
-                                En el menú que se desplega, seleccionar la opción <b>Mi cuenta</b>. </br>
+                                En el menú que se despliega, seleccionar la opción <b>Mi cuenta</b>. </br>
                                 Hacer click en el botón <b>Cambiar contraseña</b>. </br>
                                 Serás dirigido a un formulario que te permitirá ingresar una nueva contraseña. </br>
                                 Hacer click en <b>Aceptar</b>
