--- a/App/templates/combo/cargarEjemplaresAlCombo.html
+++ b/App/templates/combo/cargarEjemplaresAlCombo.html
@@ -5,7 +5,7 @@
 <body>
 
     <div class="d-flex" id="wrapper">
-
+        {% include 'navbars/sidebar.html' %}
         <div id="page-content-wrapper">
             {% include 'navbars/navbar_admin.html' %}
             <div class="container p-2">
@@ -52,5 +52,7 @@
 
         </div>
     </div>
+    {% include 'footer/footer.html' %}
 </body>
+
 </html>
